--- a/src/napoje.html
+++ b/src/napoje.html
@@ -1,50 +1,50 @@
 <h1>Nápoje</h1>
 
-<h2>Citronová voda (limonáda)</h2>
+<a name="citronova-voda-limonada"><h2>Citronová voda (limonáda)</h2></a>
 
 <p>Na žejdlík vody ostrouhej na cukru kůru s půl citronu, vytlač k tomu z půl citronu šťávu, zamíchej do toho asi půl druhého nebo dva loty cukru – a máš chutný, občerstvující nápoj pro zdravé i nemocné. Chceš-li míti teplou limonádu, tedy dej místo studené vody vařící. – Máš-li zapotřebí mnoho limonády, tedy vymačkej tolik citronů, aby bylo šťávy půl žejdlíka, na citronové kůře ostrouhej půl libry cukru, potom dej šťávu i cukr na mosazný kotlíček a nech přes to přejít jen jeden var, pak to proceď skrze čistý šat a nech to vychladnout; Lžička této šťávy stačí do sklenice vody.</p>
 
-<h2>Mandlové mléko</h2>
+<a name="mandlove-mleko"><h2>Mandlové mléko</h2></a>
 
 <p>Oloupej a utluč čtvrt libry sladkých mandlí a 4 hořké, a mezi tlučením přilévej vždy po lžíci vody. Když jsou mandle utlučeny, nalej na ně dva nebo tři žejdlíky vody, jak totiž husté mléko míti chceš, oslad to náležitě a proceď to skrze čistý šat. Je to nápoj občerstvující pro zdravé i nemocné, jenom že pro nemocné se musejí hořké mandle vynechat.</p>
 
-<h2>Punš</h2>
+<a name="puns"><h2>Punš</h2></a>
 
 <p>Nech libru cukru s půl žejdlíkem vody v novém kastrolku zvařit, a když se táhne, přidej k němu již přichystanou, ze třech citronů a jednoho pomeranče vytlačenou a procezenou šťávu, načež to hned odstav od ohně, aby to nezhořklo, nalej do toho mezi ustavičným mícháním žejdlík dobrého rumu a uschovej to v lahvicích. Že tato jako i každá jiná massa, s vařící vodou smíšená, v punšových skleničkách se podává, jest snad každému známo. Tento punš je jednoduchý ale dobrý, a nepůsobí žádné bolení hlavy.</p>
 
-<h2>Čajový punš</h2>
+<a name="cajovy-puns"><h2>Čajový punš</h2></a>
 
 <p>Dej do čistého hrnku lot holandského čaje, nalej na něj žejdlík vařící vody, přikrej ho a nech ho na teplém místě stát, nesmí se však vařit. Ostrouhej na pěti čtvrtích libry cukru kůru s jednoho citronu a s jednoho pomeranče, pak dej cukr na čistý kastrol, proceď na něj čaj, který musí míti krásně žlutou barvu, a nech ho zvařit, až se táhne, načež přidej k němu ze šesti citronů a z jednoho pomeranče procezenou šťávu a žejdlík dobrého rumu. Nyní tuto massu buď uschovej v dobře zandaných láhvích, anebo, pije-li se punš hned, spař půl lotu čaje v několika žejdlíkách vařící vody, mnoho-li právě potřebuješ, pak ho proceď a přilévej místo vody k punši. Obyčejně se dává jeden díl massy a dva díly vody.</p>
 
-<h2>Punč a vejcemi</h2>
+<a name="punc-a-vejcemi"><h2>Punč a vejcemi</h2></a>
 
 <p>Na dvanáct sklenic punše vraz do velkého hladkého hrnku osm celých vajec a kloktej je kloktačkou nebo drátovou metlou, až jsou docela zpěněné, pak vlej na ně podle některého z předešlých předpisů upravenou massu, odměř k tomu tolik vody, mnoho-li na dvanáct skleniček je potřebí, postav to na oheň a kloktej tím stále, až se to začne zvedat, pak nalévej punš do skleniček. Jest velmi dobrý.</p>
 
-<h2>Studený punš</h2>
+<a name="studeny-puns"><h2>Studený punš</h2></a>
 
 <p>Na půl druhé libře cukru ostrouhej kůru se třech citronů, pak cukr jemně utluč a dej ho do velké polívkové mísy, přidej k němu z osmi citronů procezenou šťávu, dvě láhve rýnského vína a láhev rumu, dobře to promíchej, přikrej a nech to asi dvě hodiny stát; musíš tím však častěji zamíchat, aby se cukr rozpustil; potom to nalévej do skleniček.</p>
 
-<h2>Punš se šampaňským vínem</h2>
+<a name="puns-se-sampanskym-vinem"><h2>Punš se šampaňským vínem</h2></a>
 
 <p>Upraví se zcela tak jako v předešlém čísle, jen že místo rýnského vína dají se dvě láhve šampaňského.</p>
 
-<h2>Grog</h2>
+<a name="grog"><h2>Grog</h2></a>
 
 <p>Tento nápoj sestává pouze z rumu, cukru a vřelé vody. Dej totiž do skleniček roztlučený cukr, nalej na něj dle libosti rumu a dolej vařící vodou.</p>
 
-<h2>Bišof</h2>
+<a name="bisof"><h2>Bišof</h2></a>
 
 <p>Vezmi tři hořké pomeranče, každý nakroj a nech je na čistém rendlíčku trochu opect, pak je dej do čistého hrnku, nalej na ně dvě láhve červeného vína, přidej kousek skořice a několik hřebíčků, přikrej to a nech to asi šest hodin na teplém místě stát; musíš tím však od času k času zamíchat a pomoci lžíce šťávu z pomerančů vymačkávat, vařit se to ale nesmí; potom to proceď skrze ubrousek, přidej k tomu libru na drobno nasekaného cukru, a když se tento na teplém místě rozpustí, nalévej to do skleniček.</p>
 
-<h2>Čokoláda</h2>
+<a name="cokolada"><h2>Čokoláda</h2></a>
 
 <p>Na žejdlík dobré smetany ustrouhají se 3 tabulky dobré čokolády, a když se smetana vaří, vleje se na čokoládu, a mezi ustavičným mícháním sbírá se lžičkou pěna a dává se do koflíků. Když jsou koflíky pěnou přeplněny, tedy se nahoře žhavým uhlím připálí, ostatní čokoláda se zakloktá studenou, žloutkem rozmíchanou smetanou, naleje se do konvičky a dá se na stůl k pěně za podlívku. Na žejdlík čokolády vezme se jeden žloutek. – Této pěny může se též použit místo šodó do smažených košíčků, jakož i na vařené buchty a rozličné smaženinky.</p>
 
-<h2>Čokoláda z vody</h2>
+<a name="cokolada-z-vody"><h2>Čokoláda z vody</h2></a>
 
 <p>Ustrouhá se dle potřeby několik tabulek čokolády, ku př. na žejdlík vody čtyry tabulky, a nechá se mezi ustavičným kloktáním uvařit; žloutky se vynechaji.</p>
 
-<h2>Káva (kafé)</h2>
+<a name="kava-kafe"><h2>Káva (kafé)</h2></a>
 
 <p>Zelená káva nasype se na pánvičku nad uhlíčkem, a pořád se ni míchá, až začne žloutnout a vůni ze sebe vydávat, pak se trochu posype tlučeným cukru a mezi ustavičným mícháním se hezky do hnědá upraží; potom se umele a zavaří se do připravené vařící vody, nebo se dá do mašiny k tomu zřízené. Vaří-li se v hrnku, musí se přikrejt pokličkou, aby s parou chuť nevyšla. K čistění kávy jest nejpříhodnější následující prostředek: Ve studené vodě rozkloktá se kouštínek žloutku, a když jest káva v nejlepším varu, vleje se do ni a nechá se ještě jeden var přejít, pak se zaleje trochou studené vody a nechá se jen chvilenku ustát; tak jest jistě čistá jako křišťál. Na jeden koflíček kávy, když má býti beze vši přísady, dává se nejméně 60 zrnek. Když se káva sleje, tedy se na to usedlé naleje vody, nechá se to vyvařit a schová se to k příštímu vaření na místo vody.</p>
 
@@ -52,39 +52,39 @@
 
 <p>Dobrá, čerstvě vařená smetana jest nejlepší, proto že ohřívaná mívá povrchu mastná očka, a tím stává se káva nechutnou.</p>
 
-<h2>Čaj <i>(Thee)</i></h2>
+<a name="caj-thee"><h2>Čaj <i>(Thee)</i></h2></a>
 
 <p>V novějším čase jest způsob při vzácnějších společnostech v odpoledních schůzkách dávati na tabuli mimo kávy a čokolády také čaj. Jakkoli příprava téhož jest dosti jednoduchá, přece místem se stává, že nedopatřením tento nápoj se pokazí a na místě lahodné chuti, trpké a odporné nabývá; pročež tuto budiž uvedeno, jak se náležitě připravovati má. Především nechť se při kupování čaje hledí na to, aby nebyl porušen, zvláště ale aby nebyl ztuchlý. Nejlepší druh jest tak nazvaný <b><i>císařský</i></b> čaj; jiné méně dobré dva druhy jsou: čaj <b><i>perlový</i></b> a <b><i>pekový.</i></b> Půl lotu císařského čaje stačí na dva žejdlíky vařící vody. Čaj se dá do zřízené k tomu konvice čili samovaru, poleje se lžicí vařící vody a přikreje se; za chvíli se na něj naleje ostatní vařící voda, dobře se přikreje a nechá se stát na teplém místě, aby se spařil – pravím <b><i>spařil</i></b> a nikoli vařil; potom se procedí a nalévá se hostům jako káva do šálků nebo do čajových sklenic. K čaji dá se na tabuli v konvičkách pěna ze syrové smetany udělaná (viz čís. 26., str. 463), pak dobrý rum a cukr, aby si každý host dle libosti mohl posloužiti. Mimo to dají se na stůl ještě rozličné jiné věci, jako: šunka, uzený jazyk, žemličkové řízky se sardelovým máslem (viz čís. 9., str. 31), studená telecí pečeně, vejce na tvrdo uvařené a na půlky rozkrájené, tyčky, kmínem sypané rohlíčky, suchárky, zázvorky, anýzový chlebíček atd., kterýchžto věcí velký výběr v této knize nalezneš. Že se každé maso na tenké řízky nakrájet a na talíře ouhledně urovnat musí, doufám že není potřeba zvlášť podotýkat. Máš-li právě kyselý rosol čís. 27. (str. 56), tedy velmi chuti i oku posloužíš, když jej na drobno usekáš a masa ním posypeš. Také se musejí zvláštní malé talířky, ubrousky, vidličky a nožejčky pro každého hosta uchystat.</p>
 
-<h2>Rejžovka</h2>
+<a name="rejzovka"><h2>Rejžovka</h2></a>
 
 <p>Vyper čtyry loty přebrané rejže v několika vařících vodách a nech ji s kouskem skořice a s kouskem nakrájené citronové kůry ve čtyřech žejdlíkách dobrého mléka hodně rozvařit; pak to skrze žíněné sejtko proceď, rozmíchej šest žloutků s půl žejdlíkem studené smetany a se čtyřmi loty tlučeného cukru, skloktej to s tím vařícím rejžovým mlékem a nalévej to při večerní společnosti buď do skleniček nebo do šálků.</p>
 
-<h2>Šodó</h2>
+<a name="sodo"><h2>Šodó</h2></a>
 
 <p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k nim čtvrt libry tlučeného cukru, s půl citronu nerozkrájenou kůru, žejdlík dobrého rakouského vina, a hned za studena to hezky rozkloktej; pak oblož kolem hrnku hodně uhlí, nebo to postav na rozpálenou plotnu a pořád tím kloktej, až se to pění a ve vaření zhoustne, načež to honem nalej do koflíků a dej to na stůl. – Šodó se může též k rozličným jídlům potřebovat, jako ke košíčkům, vařeným buchtám (puding), smaženým štrudlím a t. p.</p>
 
-<h2>Šodó ze slivovice</h2>
+<a name="sodo-ze-slivovice"><h2>Šodó ze slivovice</h2></a>
 
 <p>Do pětižejdlíkového hrnku vraz 12 žloutků, dej k nim 12 lotů tlučeného cukru, s jednoho citronu drobně rozkrájenou kůru, a rozdělej to asi s pěti lžícemi studeného rakouského vina; pak vlej na bílou hlubokou mísu žejdlík dobré slivovice, zapal ji papírem a nech ji chvilku hořet, potom ji vlej na ty rozkloktané žloutky, postav hrnek do uhlí a míchej to jako jiné šodó, až nabude a zhoustne. Můžeš ho dát na stůl buď tak v koflíčkách, nebo nim polej mandlový dort a dej ho mezi nákypy.</p>
 
-<h2>Pálené víno</h2>
+<a name="palene-vino"><h2>Pálené víno</h2></a>
 
 <p>Do dvou láhví červeného vína dej půl libry cukru, s jednoho citronu nakrájenou kůru, půl lotu skořice a několik hřebíčků, postav to na horké místo a nech to tak hezky dlouho stát, aby se chuť ze všeho spojila, vařit se to však nesmí; pak to proceď skrze sejtko a nalévej to hodně horké do skleniček.</p>
 
-<h2>Nápoj na způsob likéru</h2>
+<a name="napoj-na-zpusob-likeru"><h2>Nápoj na způsob likéru</h2></a>
 
 <p>Skrájej velmi tence kůru se třech citronů, nalej na ni půl žejdlíka vody a nech ji šest hodin močit.</p>
 
 <p>Potom dej na kastrol půl libry nejpěknějšího cukru, nalej na něj žejdlík vody, láhev rumu, přidej k tomu též tu vodu z citronové kůry a z pěti citronů procezenou šťávu, a míchej tím stále nad ohněm, až to přichází k varu; načež k tomu mezi ustavičným mícháním proceď skrze ubrousek půl žejdlíka mléka, odstav to od ohně, přikrej to ve studené vodě namočeným a vyždímaným ubrouskem, a nech to dvě hodiny stát; pak to skrze ubrousek dvakrát po sobě proceď, poněvadž to poprvé není docela čisté. Tento nápoj večer lahodně chutná.</p>
 
-<h2>Malinová sláva</h2>
+<a name="malinova-slava"><h2>Malinová sláva</h2></a>
 
 <p>Zralé maliny se v hrnku rozmačkají, talířem přikrejou a nechají se ve studeném místě dva dni stát; potom se vymačkají, procedí skrze plátěný šat a nechají se přikryté v kuchyni dva dni stát. Ta pěna, co z nich vykyše, se povrchu lžicí sebere; pak se čistý hrnek pováže řídkým plátěným šatem, ta malinová šťáva se ještě jednou na šat naleje a nechá se bez mačkáni do hrnku protéct, aby byla docela čistá. Nyní se šťáva odměří; kolik jest jí žejdlíků, tolik liber cukru nechá se rozpustit, a když jest rozpuštěn, dá se šťáva do něho a mezi varem se ustavičně míchá, přičemž se pěna povrchu tak dlouho sbírá, až se přestane pěnit, načež se odstaví; nesmí se ale dlouho vařit, aby neztratila barvu a chuť, a musí zůstati docela řídká. Když šťáva docela vychladne, vleje se do láhve a uschová se do studeného místa. – Lžíce této šťávy, s vodou smíšená, poskytuje velmi občerstvující nápoj.</p>
 
 <p>Na tentýž způsob připravuje se také rybízová šťáva.</p>
 
-<h2>Ječná voda</h2>
+<a name="jecna-voda"><h2>Ječná voda</h2></a>
 
 <p>Přeber žejdlík ječmena, nalej na něj máz vody a nech jej hodně vařit; kdyby se to příliš vyvařilo, můžeš přilejt vody; načež to přeceď, a máš-li med, oslaď to dle libosti medem, pakli ne, tedy cukrem, a proceď k tomu z jednoho citronu šťávu. Tento nápoj jest pro nemocné zvláště prospěšný.</p>
 
