--- a/src/pudingy.html
+++ b/src/pudingy.html
@@ -1,49 +1,49 @@
 <h1>Pudingy</h1>
 
-<h2>Puding žemlový</h2>
+<a name="puding-zemlovy"><h2>Puding žemlový</h2></a>
 
 <p>Pro 12 osob ostrouhej 4 žemličky a. namoč je ve smetané. Utři čtvrt libry másla, vraz do něho 6 žloutků, vymačkej ty namočené žemličky, dej je k tomu a dobře to rozmíchej; potom k tomu přidej 4 loty malých hrozinek, 4 loty na nudličky rozkrájené pomerančové kůry, 4 loty opařených, na nudličky rozkrájených sladkých mandlí, 4 loty tlučeného cukru a malou špetičku soli; je-li arak, může se ho k tomu dát dvě lžíce, a pak sněhu z pěti bílků; potom se vymaže forma máslem, dá se to do ni a nechá se to hodinu v páře vařit; pak se to vyklopí a naleje se na to husté sodo (viz čís. 6 mezi nápojemi)</p>
 
-<h2>Jiný žemlový puding  s maraskinem</h2>
+<a name="jiny-zemlovy-puding--s-maraskinem"><h2>Jiný žemlový puding  s maraskinem</h2></a>
 
 <p>Rozkrájej na kostky jednu ostrouhanou žemličku, dej ji na hluboký talíř, pokrop ji nejdříve maraskinovou rosolkou <i>(Maraskino Liqueur)</i>, pak ji polej sladkou smetanou, však jen tak, aby se ni žemlička napila, ale ne příliš rozmočila; potom utři na misce dva loty čerstvého másla, dej do něho tu namočenou žemličku a pěkně to rozetři, vraz do toho 5 žloutků, dej k tomu 3 loty tlučeného cukru, lot oloupaných drobně rozkrájených mandlí, lot oloupaných na nudličky rozkrájených pistácií, trochu drobně rozkrájené citronové kůry, nebo s cukrem tlučené vanilie, dobře to umíchej, a konečně do toho vmíchej sníh z těch pěti bílků; nyní vymaž formu máslem, vysyp ji strouhanou žemličkou a krájenými mandlemi, vylož ji pistáciovými nudličkami, vlej do ni tu míchaninku a nech to tři čtvrtě hodiny ve vodě vařit, pak to postav i s vodou asi na čtvrt hodiny do horké trouby, aby se to navrchu opeklo, ostatně ale aby to zůstalo bílé; potom to vyklop, polej to buď maraskinovou rosolkou, anebo udělej vůkol věnec z hustého šodó a dej to na tabuli.</p>
 
-<h2>Anglický puding</h2>
+<a name="anglicky-puding"><h2>Anglický puding</h2></a>
 
 <p>Utři 2 loty rozpuštěného, procezeného čerstvého hovězího tuku, až pěkně zbělí, vraz do něho 4 žloutky, dobře to utři, pak do toho ještě přilej dva loty drobně rozkrájeného syrového hovězího tuku, dej k tomu půl druhé ve smetaně namočené vymačkané žemličky, 3 loty tlučeného cukru, 3 loty velkých hrozinek bez jadýrek a 3 loty malých hrozinek, 3 loty loupaných, na nudličky rozkrájených sladkých mandlí, trochu to osol, dobře to umíchej a konečně do toho vmíchej ze dvou bílků sníh; nyní namaž servít novým máslem, posyp ho moukou, dej do něho tu míchaninu, zavaž to volně a nech to v trochu osolené vodě hodinu vařit; pak servít rozvaž, puding vyklop, rozkrájej ho ouhledně na stejné lístky a urovnej ho na mísu tak, aby uprostřed zůstal prázdný důlek, do toho důlku nalej rumu, před dveřmi ho zapal a nes to v plamenu na tabuli. Šodó dej k tomu zvlášť na šálek.</p>
 
-<h2>Plum-puding</h2>
+<a name="plum-puding"><h2>Plum-puding</h2></a>
 
 <p>Stáhni mázdřičku se 12 lotů pěkného ledvinového loje, nakrájej ho velmi drobně, a mezi krájením přimíchej k němu čtvrt libry mouky, pak to dej do mísy, vraz do toho dva žloutky a dvě celé vejce, a hodně to umíchej, potom k tomu připoj 4 loty na dlouho nakrájených pistácií, 4 loty nakrájeného citronádu, 6 lotů sultánek, 6 lotů tlučeného cukru, na němž jsi byla ostrouhala kůru s jednoho citronu, promíchej vše náležité a nech to přikryté čtvrt hodiny stát; ‚potom pomaž servítek máslem, posyp ho moukou, vlej do něho tu míchaninu, zavaž to volně, vlož to do vařící vody a nech to dvě hodiny vařit; pak to vyndej, vyklop puding na mísu a nalej na něj šodó</p>
 
-<h2>Puding z rejže</h2>
+<a name="puding-z-rejze"><h2>Puding z rejže</h2></a>
 
 <p>Přeber čtvrt libry rejže, vyper ji dobře ve dvou studených a ve dvou vařících vodách, konečně na ni nalej ještě vařící vodu a nech ji v ní půl hodiny stát, aby pěkně zbělela; pak ji oceď, nalej na ni dva malé žejdlíky smetany a nech ji hezky do husta povařit, ale aby se nerozvařila, pak ji nech vychladnout. Utři 5 lotů nového másla, dej do něho tu rejži, vraz do ní 5 žloutků, trochu ji osol, dej k ní 2 loty malých, dobře přebraných a vypraných hrozinek, 2 loty rozlámaných piškotů, 2 loty na nudličky rozkrájené naložené pomerančové a s půl citronu kůry, 4 loty tlučeného cukru, všecko dobře umíchej, a konečně do toho vmíchej ze třech bílků sníh, pak namaž servít novým máslem, dej do něho tu míšeninu, volně to zavaž a nech to ve velkém hrnci ve slané vodě něco přes hodinu vařit; potom to vyklop na mísu, posyp drobně rozkrájenou cukrovar nou citronovou kůrou (citronadou) a hrubě utlučeným cukrem, dej to na tabuli, a k tomu v nádobce čokoládu. (viz čís. 10 mezi nápojemi)</p>
 
-<h2>Jiný puding z rejže</h2>
+<a name="jiny-puding-z-rejze"><h2>Jiný puding z rejže</h2></a>
 
 <p>Uvař jako předešle ve sladké smetaně 4 loty vyprané rejže, aby z ni byla měkká a hustá kaše, a nech ji vychladnout; utři dva loty nového másla, dej do něho tu rejži, přidej k tomu 3 loty tlučeného cukru, půl druhého lotu hovězího, drobně rozkrájeného tuku, 2 loty velkých hrozinek bez jadýrek, 2 loty na malé kostky rozkrájené cukrované pomerančové kůry, s půl pomeranče ostrouhanou kůru, trochu soli, 2 loty na kouštínky rozlámaných hořkých pokroutek, 6 žloutků, ze 4 bílků sníh, 4 lžíce rumu nebo araku, a všecko dobře promíchej, pak vymaž melounovou formu, vysyp ji žemličkovou-kůrkou, dej do ní tu míšeninu a nech to hodinu v páře vařit; potom to vyklop, polej arakem, v kterém však se musí nechat na teplém místě cukr rozmočit, posyp to tlučenými hořkými pokroutkami a dej to na tabuli. Jsou-li při tabuli samí páni, hodí se tento puding lépe než příliš sladký nákyp, protože jest silný a přihořklý.</p>
 
-<h2>Puding se ságem</h2>
+<a name="puding-se-sagem"><h2>Puding se ságem</h2></a>
 
 <p>Na čtvrt libry čerstvého másla nalej půl žejdlíka vlažné smetany, aby se v ní rozpustilo, dej na rendlíček 8 lotů pěkné mouky, to mléko znenáhla do ní vmíchej, a nech to mezi ustavičným mícháním vařit, aby z toho byla hustá kaše; pak to dej na mísu a míchej, až to vychladne, aby z toho bylo hezky hladké těstíčko; potom do toho vraz 8 žloutků, dej k tomu s půl citronu drobně rozkrájenou kůru, 8 lotů cukru, trochu soli, a konečně do toho vmíchej z osmi bílků sníh; nyní namoč servít ve studené vodě, vyždímej ho, vlej do něho tu míšeninu, zavaž to a nech to v trochu slané vařící vodě dobrou hodinu vařit; když to začne nabývat, zavazuj kaničku vždy výš a výše. Omáčku dělej takto: Vezmi půl druhého žejdlíka červeného vína, dej do něho koflíček dobře vypraného sága a nech ho hezky měkce rozvařit; nech při něm vařit kousek celé skořice, 5 celých hřebíčků a s půl citronu kůru, dobře to rozmíchej a proceď, pak dej do toho 6 lotů cukru, lžíci zavařeného rybízu, a opět to proceď; kdyby to bylo málo sladké, může se to ještě přisladit. Když jest puding uvařen, vyváže se ze servítu. Já se na mísu, poleje se omáčkou, posype hrubým cukrem a dá se na tabuli.</p>
 
-<h2>Puding z bramborů</h2>
+<a name="puding-z-bramboru"><h2>Puding z bramborů</h2></a>
 
 <p>Utři hodně čtvrt libry másla, vraz do něho šest žloutků, dej k tomu půl libry vařených a ustrouhaných bramborů, dva loty mouky, šest lotů cukru, s jednoho citronu nakrájenou kůru, trochu skořice, hodně to umíchej a konečně do toho vmíchej sníh z těch šesti bílků, pak vymaž formu máslem, vysyp ji strouhanou žemličkou, vlej do ní tu míšeninu a nech to nejméně hodinu v páře vařit, načež to postav ještě na čtvrt hodiny do trouby; potom to vyklop na mísu, rozřeď několik lžic malinové šťávy s červeným vínem, přislaď to dle potřeby a dej to ve zvláštní nádobce na stůl k tomu pudingu.</p>
 
-<h2>Puding špenátový</h2>
+<a name="puding-spenatovy"><h2>Puding špenátový</h2></a>
 
 <p>Přeber dobře špenát, vyper ho v několika vodách, pak ho drobnince usekej, utři kousek nového másla, dej do něho ten špenát, vraz k němu 4 celé vejce, přidej trochu květu, trochu soli a strouhané žemličky tolik, aby to bylo husté tak jako jiný puding, namoč čistý šat ve studené vodě, vlej to do něho, zavaž to a nech to ve slané vodě hodinu vařit; pak to vyklop na mísu, posyp ostrouhanou žemličkovou kůrkou, polej rozpáleným novým máslem a dej to na stůl.</p>
 
-<h2>Puding tvarohový</h2>
+<a name="puding-tvarohovy"><h2>Puding tvarohový</h2></a>
 
 <p>Utři libru tvarohu se čtyřmi loty másla, vraz k tomu čtyry žloutky, vmíchej do toho půl libry krupice a že čtyr bílků sníh, osol to trochu, přidej trochu květu, namaž servít máslem, posyp ho strouhanou žemličkou, vlej to do něho, volně to zavaž a nech to hodinu v trochu osolené vodě vařit; pak to vyndej velkým cedníkem, rozvaž servít, puding vyklop na mísu, posyp ho strouhanou žemličkovou kůrkou a polej ho rozpáleným máslem.</p>
 
-<h2>Puding s uzeninou</h2>
+<a name="puding-s-uzeninou"><h2>Puding s uzeninou</h2></a>
 
 <p>Vraz do žejdlíku dobré sladké smetany 8 celých vajec a dobře to rozkloktej; dej do hrnku půl žejdlíka pěkné mouky, a tou rozkloktanou smetanou rozdělej řidounké těsto, trochu ho osol a vmíchej do něho čtvrt libry vařeného, drobně rozkrájeného uzeného masa, pak namoč ve vodě servít, posyp ho moukou, vlej do něho to těsto, volně to zavaž a nech to ve slané vodě celou hodinu vařit; potom to vyklop na mísu, posyp to strouhanou žemličkovou kůrkou a polej rozpáleným máslem. Může to býti také bez uzeniny, s uzeninou je to však chutnější. Také se to může vařit v melounové formě, totiž: vymaže se forma máslem a vysype strouhanou žemličkovou kůrkou, těsto se do ní vlej a nechá se to v páře hodinu vařit.</p>
 
-<h2>Jiný puding s uzeninou</h2>
+<a name="jiny-puding-s-uzeninou"><h2>Jiný puding s uzeninou</h2></a>
 
 <p>Utři 4 loty másla, ostrouhej 4 žemličky, namoč je ve smetaně, pak je vymačkej a dej k tomu máslu, vraz do toho 4 žloutky a 3 celé vejce, přidej k tomu ještě lžíci smetany, s půl citronu na dlouho rozkrájenou kůru, a buď lot rozkrájených pistácií nebo lot mandlí, trochu květu, trochu soli, a vše dobře promíchej, načež dej k tomu půl libry uvařené drobně rozkrájené uzeniny, a ještě to trochu zamíchej; nyní pomaž servít máslem, nebo ho namoč ve studené vodě, dej do něho tu míchaninku, volně to zavaž a nech to ve slané vodě celou hodinu vařit, pak to vyklop na mísu, posyp ostrouhanou žemličkovou kůrkou a polej horkým máslem. Okrášlit to můžeš buď do věnečka nastrkanými mandlemi nebo pistáciemi.</p>
