--- a/src/rozlicna-masla.html
+++ b/src/rozlicna-masla.html
@@ -1,32 +1,32 @@
 <h1>Rozličná másla</h1>
 
-<h2>Račí máslo</h2>
+<a name="raci-maslo"><h2>Račí máslo</h2></a>
 
 <p>Uvař půl kopy třebas těch nejmenších raků, načež ocásky a klepýtka vyloupej, žluč i to houbovaté odstraň, to ostatní v moždíři na kaši utluč, dej to s půl librou čerstvého másla na rendlíček a nech to tak dlouho škvařit, až se na tom ukáže tmavočervená pěna, pak to vlej do starého čistého, ve studené vodě omočeného a vyždímaného ubrousku, a mezi dvěma vařečkama všecko máslo protlač a nech ustydnout. – Toto máslo nechá se i při největší opatrnosti jenom několik dní udržet; také se jen v měsících, kdy právě raci jsou, totiž od května až do srpna, jídla s račím máslem, kterým ouhlednosti i chuti velmi nabudou, připravovat mohou.</p>
 
-<h2>Máslo zlaté</h2>
+<a name="maslo-zlate"><h2>Máslo zlaté</h2></a>
 
 <p>Nech ve smetaně rozpustit trochu šafránu a proceď to; potom utři čtvrt libry čerstvě tlučeného másla asi se čtyřmi tvrdými, hezky žlutými žloutky, a přimíchej k tomu té šafránové smetany; aby se máslo stalo ještě líbeznějším, můžeš k němu přimíchat s půl citronu šťávy, načež ho dej do studeného místa. – Toto máslo se hodí k okrašlování mis se studenými jídly, jako šunek, uzených jazyků a masitých rosolů.</p>
 
-<h2>Máslo zelené</h2>
+<a name="maslo-zelene"><h2>Máslo zelené</h2></a>
 
 <p>Utři čtvrt libry čerstvě tlučeného másla se třemi na tvrdo uvařenými žloutky, dej k tomu lžíci špenátového tvarohu, dobře to promíchej, pak to dej do stříkánkové formy a protlač to skrze řídké sejtko – tak je to jako travinka.</p>
 
-<h2>Máslo růžové</h2>
+<a name="maslo-ruzove"><h2>Máslo růžové</h2></a>
 
 <p>Utři másla mnoho-li potřebuješ s tolika kapkami alkermesové šťávy, až je barvy krásně růžové. – Toto máslo hodí se pouze k okrášlení masitých rosolů; když se totiž mezi zelené lístky růžové hromádky pokladou, pěkně to vyhlíží.</p>
 
-<h2>Máslo sardelové</h2>
+<a name="maslo-sardelove"><h2>Máslo sardelové</h2></a>
 
 <p>Omej sardelky v čisté studené vodě, mnoho-li jich potřebuješ, pak šupinky setři, odděl obě půlky od prostřední kůstky, načež sardelky na čistém prkénku nejdříve samotné, pak s čerstvým máslem rozetři. Kolik lotů je sardelek, tolik lotů musí býti másla, a rozetři to tak hladce, aby to bylo opět jako máslo; kousky sardelek nesmí v tom býti vidět. – Máslo sardelové potřebuje se k nesčíslným věcem, a když se na přípravu jeho práce nešetří, stane se ouhlednější i chutnější.</p>
 
-<h2>Máslo čokoládové</h2>
+<a name="maslo-cokoladove"><h2>Máslo čokoládové</h2></a>
 
 <p>Utři čtvrt libry čerstvě tlučeného másla se třemi na tvrdo vařenými žloutky, načež k tomu připoj dvě malé tabulky ustrouhané čokolády a dobře to utři; kdo chce, může k tomu přidati trochu cukru a trochu tlučené vanilie. – Toto máslo se požívá buď k čerstvě pečeným žemličkám nebo na oplatky namazané.</p>
 
 <p>Z másla žlutého, zeleného a černého mohou se dělati všelijaké věci, jako: košíčky, pyramidy atd. K okrašlování se zelené máslo dá do stříkánkové formy a protlačí se skrze řídké sejtko, uvnitř formy se nacházející, nebo se protlačí skrze cedník, anebo skrze stříkánkovou hvězdu <i>(Spritzfrapsenform)</i>. Zkušená kuchařka ostatně lehce pochopí, co se k čemu hodí, aby se to chutnější a ouhlednější stalo.</p>
 
-<h2>Máslo s bylinkami <i>(Toleranz)</i></h2>
+<a name="maslo-s-bylinkami-toleranz"><h2>Máslo s bylinkami <i>(Toleranz)</i></h2></a>
 
 <p>Utře se čtvrt libry čerstvě tlučeného másla, osolí se a dá se k němu buď drobně rozkrájené routy, nebo kopru anebo pažitky <i>(Schnittling)</i>, dobře se promíchá a buď se jen bochánek z něho udělá, nebo se dá do porcelánové nebo skleněné nádobky a nechá se ve sklepě hodně ztuhnout; nebo se skrze stříkánkovou formu jako šnek na talíř protlačí a nechá se ve sklepě ztuhnout. Polovic toho másla a polovic tvarohu je tak nazvaná rozhuda (Toleranz) a v letě s chlebíčkem k pivu výborně chutná. Tato rozhuda nebo máslo může se rozličně okrášlit, ku př. na jaře věncem z bílých a červených řetkviček, nebo barevným máslem.</p>
 
