--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<h1>Domácí kuchařka</h1>
+<a href="about.html"><h1>Domácí kuchařka</h1></a>
 
 <ul>
 <li><a href="predmluva.html">Předmluva</a></li>
