--- a/src/masite-rosoly-huspeniny-sulzen.html
+++ b/src/masite-rosoly-huspeniny-sulzen.html
@@ -1,4 +1,4 @@
-<h1>Masité rosoly (huspeniny, Sulzen)</h1>
+<a href="index.html"><h1>Masité rosoly (huspeniny, Sulzen)</h1></a>
 
 <a name="aspik"><h2>Aspik</h2></a>
 
