--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -1,4 +1,4 @@
-<h1>Moučná jídla, obyčejná i jemnější</h1>
+<a href="index.html"><h1>Moučná jídla, obyčejná i jemnější</h1></a>
 
 <a name="moucne-knedliky"><h2>Moučné knedlíky</h2></a>
 
