--- a/src/nalozeniny-k-hovezimu-masu.html
+++ b/src/nalozeniny-k-hovezimu-masu.html
@@ -1,4 +1,4 @@
-<h1>Naloženiny k hovězímu masu</h1>
+<a href="index.html"><h1>Naloženiny k hovězímu masu</h1></a>
 
 <a name="okurky-ve-vode-nalozene"><h2>Okurky ve vodě naložené</h2></a>
 
