--- a/src/omacky-k-hovezimu-masu.html
+++ b/src/omacky-k-hovezimu-masu.html
@@ -1,4 +1,4 @@
-<h1>Omáčky k hovězímu masu</h1>
+<a href="index.html"><h1>Omáčky k hovězímu masu</h1></a>
 
 <a name="omacka-cibulkova"><h2>Omáčka cibulková</h2></a>
 
