--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -1,4 +1,4 @@
-<h1>Ovocní zavařeninky</h1>
+<a href="index.html"><h1>Ovocní zavařeninky</h1></a>
 
 <p>Hodí se k nadívání dortů, koblih a jiných pamlsek.</p>
 
