--- a/src/zadelavana-zverina.html
+++ b/src/zadelavana-zverina.html
@@ -1,4 +1,4 @@
-<h1>Zadělávaná zvěřina</h1>
+<a href="index.html"><h1>Zadělávaná zvěřina</h1></a>
 
 <a name="cerna-zverina-divoky-kanec"><h2>Černá zvěřina (divoký kanec)</h2></a>
 
