--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -1,4 +1,4 @@
-<h1>Zeleniny</h1>
+<a href="index.html"><h1>Zeleniny</h1></a>
 
 <a name="kadernik-braunkohl-s-klobasou"><h2>Kadeřník <i>(Braunkohl)</i> s klobásou</h2></a>
 
