--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -1,4 +1,4 @@
-<h1>Nádivky do koláčů, buchtiček a koblih</h1>
+<a href="index.html"><h1>Nádivky do koláčů, buchtiček a koblih</h1></a>
 
 <a name="povidla"><h2>Povidla</h2></a>
 
