--- a/src/raci-zaby-sneci-a-musle.html
+++ b/src/raci-zaby-sneci-a-musle.html
@@ -1,4 +1,4 @@
-<h1>Raci, žáby, šneci a mušle</h1>
+<a href="index.html"><h1>Raci, žáby, šneci a mušle</h1></a>
 
 <a name="raci-s-omackou"><h2>Raci s omáčkou</h2></a>
 
