--- a/src/rozlicne-octy.html
+++ b/src/rozlicne-octy.html
@@ -1,4 +1,4 @@
-<h1>Rozličné octy</h1>
+<a href="index.html"><h1>Rozličné octy</h1></a>
 
 <a name="ocet-estragonovy"><h2>Ocet estragonový</h2></a>
 
