--- a/src/rybi-a-postni-polivky.html
+++ b/src/rybi-a-postni-polivky.html
@@ -1,4 +1,4 @@
-<h1>Rybí a postní polívky</h1>
+<a href="index.html"><h1>Rybí a postní polívky</h1></a>
 
 <a name="petruzelova-voda"><h2>Petruželová voda</h2></a>
 
