--- a/src/sladke-rosoly.html
+++ b/src/sladke-rosoly.html
@@ -1,4 +1,4 @@
-<h1>Sladké rosoly</h1>
+<a href="index.html"><h1>Sladké rosoly</h1></a>
 
 <p>Má-li snaha kuchařčina dobrým zdařením následujících, velkou trpělivost vyžadujících jídel býti poněkud odměněna, musí tři hlavni věci přísně na zřeteli míti: předně, aby si zaopatřila nejlepší druh vyzího měchýře, totiž takový, který bělostí a průhledností vyniká; za druhé, aby vyzí měchýř náležitě učistila a zvařila, a za třetí, aby hotový rosol dobře z formy na mísu vyklopila, což takto se děje: Když je čas nésti rosol na stůl, omočí se forma se ztuhlým rosolem v horké vodě, spěšně se otře, položí se na ni plochá mísa, s touto se forma obrátí, načež se forma zvolna a opatrně zdvihá; kdyby rosol ještě při formě držel, tedy se musí ohřát nějaký šat a forma ním všude natírat, také se musí lehkým zatřesením formy odpadnutí rosolu napomáhat. Tímto způsobem se všecky rosoly z forem vyndávají. Kdyby se ale začátečnice v kuchaření této nesnadné práci chtěla vyhnouti, tedy může každý rosol místo do formy nalejt do pěkné buď skleněné nebo porcelánové mísy, a když rosol ztuhne, s touto mísou jej na stůl postavit.</p>
 
