--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -1,4 +1,4 @@
-<h1>Zadělávaná a dušená jídla</h1>
+<a href="index.html"><h1>Zadělávaná a dušená jídla</h1></a>
 
 <a name="kurata-s-knedlickami"><h2>Kuřata s knedlíčkami</h2></a>
 
