--- a/src/jeste-nektere-potrebne-pripravy.html
+++ b/src/jeste-nektere-potrebne-pripravy.html
@@ -1,2 +1,2 @@
-<a href="index.html"><h1>Ještě některé potřebné přípravy</h1></a>
+<a href="index.html" class="hlavicka"><h1>Ještě některé potřebné přípravy</h1></a>
 
