--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Ledy rozličných barev</h1></a>
+<a href="index.html" class="hlavicka"><h1>Ledy rozličných barev</h1></a>
 
 <a name="k-ozdobeni-dortu-a-cukrovinek"><h2>k ozdobení dortů a cukrovinek</h2></a>
 
