--- a/src/ovocni-zavareninky.html
+++ b/src/ovocni-zavareninky.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Ovocní zavařeninky</h1></a>
+<a href="index.html" class="hlavicka"><h1>Ovocní zavařeninky</h1></a>
 
 <p>Hodí se k nadívání dortů, koblih a jiných pamlsek.</p>
 
