--- a/src/predmluva.html
+++ b/src/predmluva.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Předmluva</h1></a>
+<a href="index.html" class="hlavicka"><h1>Předmluva</h1></a>
 
 <p><b><i>„Domácí kuchařce“</i></b> od Magd. Dobromily Rettigové dostalo se již tak velkého rozšíření; žeby zbytečno bylo milým krajankám našim nově doporučovati knihu, kteráž u nich tak skvělé pověsti si dobyla; devatero načisto vyprodaných vydáni, každé u valném počtu výtisků, jest nejvýmluvnějším důkazem všeobecné její obliby. Spisovatelku její – staršímu pokolení našemu i jinak chvalitebně známou co horlivou národovkyni a původkyni mnoha spisů zábavných – právem nazvati můžeme matkou všech novějších kněh kuchařských, ješto jsme s potěšením shledali a i každý jiný bližším nahlédnutím v tu neb onu část přesvědčiti se může, že jiným spisům toho oboru pro svou užitečnost a přiměřené uspořádání za vzor a pravidlo sloužila.</p>
 
