--- a/src/vejce.html
+++ b/src/vejce.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Vejce</h1></a>
+<a href="index.html" class="hlavicka"><h1>Vejce</h1></a>
 
 <a name="vejce-na-francouzsky-zpusob"><h2>Vejce na francouzský způsob</h2></a>
 
