--- a/src/hovezi-maso-a-rozlicna-jeho-uprava.html
+++ b/src/hovezi-maso-a-rozlicna-jeho-uprava.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Hovězí maso a rozličná jeho úprava</h1></a>
+<a href="index.html" class="hlavicka"><h1>Hovězí maso a rozličná jeho úprava</h1></a>
 
 <a name="obycejne-hovezi-maso"><h2>Obyčejné hovězí maso</h2></a>
 
