--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Kompoty</h1></a>
+<a href="index.html" class="hlavicka"><h1>Kompoty</h1></a>
 
 <a name="kompot-z-cerstvych-visni"><h2>Kompot z čerstvých višní</h2></a>
 
