--- a/src/napoje.html
+++ b/src/napoje.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Nápoje</h1></a>
+<a href="index.html" class="hlavicka"><h1>Nápoje</h1></a>
 
 <a name="citronova-voda-limonada"><h2>Citronová voda (limonáda)</h2></a>
 
