--- a/src/pudingy.html
+++ b/src/pudingy.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Pudingy</h1></a>
+<a href="index.html" class="hlavicka"><h1>Pudingy</h1></a>
 
 <a name="puding-zemlovy"><h2>Puding žemlový</h2></a>
 
