--- a/src/rozlicna-masla.html
+++ b/src/rozlicna-masla.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Rozličná másla</h1></a>
+<a href="index.html" class="hlavicka"><h1>Rozličná másla</h1></a>
 
 <a name="raci-maslo"><h2>Račí máslo</h2></a>
 
