--- a/src/rozlicne-miseninky.html
+++ b/src/rozlicne-miseninky.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Rozličné míšeninky</h1></a>
+<a href="index.html" class="hlavicka"><h1>Rozličné míšeninky</h1></a>
 
 <a name="miseninka-majorankova"><h2>Míšeninka majoránková</h2></a>
 
