--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Rozličné ryby</h1></a>
+<a href="index.html" class="hlavicka"><h1>Rozličné ryby</h1></a>
 
 <a name="kapr-na-cerno"><h2>Kapr na černo</h2></a>
 
