--- a/src/salaty.html
+++ b/src/salaty.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Saláty</h1></a>
+<a href="index.html" class="hlavicka"><h1>Saláty</h1></a>
 
 <a name="salat-hlavkovy"><h2>Salát hlávkový</h2></a>
 
