--- a/src/zavarene-cele-ovoce.html
+++ b/src/zavarene-cele-ovoce.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Zavařené celé ovoce</h1></a>
+<a href="index.html" class="hlavicka"><h1>Zavařené celé ovoce</h1></a>
 
 <a name="jak-se-ovoce-v-pare-zavaruje"><h2>Jak se ovoce v páře zavařuje</h2></a>
 
