--- a/src/zmrzliny.html
+++ b/src/zmrzliny.html
@@ -1,4 +1,4 @@
-<a href="index.html"><h1>Zmrzliny</h1></a>
+<a href="index.html" class="hlavicka"><h1>Zmrzliny</h1></a>
 
 <a name="jak-se-ma-led-pripravovat-a-zmrzlina-delat"><h2>Jak se má led připravovat a zmrzlina dělat</h2></a>
 
